Only clear the endpoint information in ugen_set_interface only if setting the new altno suceeds.

Avoids the null de-ref in PR/50597 and PR/50810